[tool.poetry]
name = "cloud_monitor"
version = "0.1.0"
description = "Cloud Monitoring"
authors = ["Your Name <name@yourmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.29"
alembic = "^1.7.5"
psycopg2 = "^2.9.2"
pytest = "^4.6"
requests = "^2.26.0"
boto3 = "^1.20.26"
fastapi = "^0.70.1"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
dramatiq = "^1.12.1"
dramatiq-sqs = "^0.1.0"
google-cloud-pubsub = "^2.12.0"
customerio = "^1.4"
google-api-core = "2.7.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
